<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bgmain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical" >


            <androidx.cardview.widget.CardView
                android:id="@+id/panel_soal_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cek_keadaan"
                        android:textSize="16sp"
                        android:gravity="center_horizontal"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_apakah_anda_merasa_demam"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radiogroup1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/iya"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/iya" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tidak" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tidak_tahu" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/panel_soal_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_2_apakah_anda_merasakan_rasa_tidak_nyaman_dan_nyeri_di_tubuh_anda"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radiogroup2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RadioButton

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/iya" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tidak" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tidak_tahu" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/panel_soal_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardPreventCornerOverlap="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_apakah_anda_merasa_nyeri_di_dada_atau_rasa_tertekan_pada_dada"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radiogroup3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/iya" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tidak" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tidak_tahu" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/panel_soal_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_apakah_ada_perubahan_warna_kulit_pada_jari_tangan_atau_jari_kaki_serta_ruam_pada_kuliat"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radiogroup4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/iya" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tidak" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tidak_tahu" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/panel_soal_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_apakah_anda_mengalami_diare_beberapa_hari_ini"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radiogroup5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/iya" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tidak" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tidak_tahu" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_proses"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proses" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
